# Opptra

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml
backend/api/: dependencies.py
backend/api/routes/: decisions.py  portfolio.py  queue.py  sku.py
backend/data/: brand_authorization.json  competitors.json  decisions_seed.json  fee_config.json  skus.json
backend/db/: init.py  queries.py
backend/models/: cluster.py  decision.py  recommendation.py  sku.py
backend/prompts/: cluster_formation_v1.0.txt  override_insight_v1.0.txt  pattern_synthesis_v1.0.txt  sku_recommendation_v1.0.txt
backend/services/: ai_orchestrator.py  cluster_engine.py  fallback_engine.py  override_insights.py  pattern_synthesis.py  payload_builder.py  signal_engine.py  sku_scanner.py  validation.py
frontend/: package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/log/: page.tsx
frontend/src/components/layout/: TopNav.tsx
frontend/src/components/log/: DecisionLogTable.tsx  LogFilters.tsx  PortfolioInsightsPanel.tsx
frontend/src/components/modals/: OverrideModal.tsx
frontend/src/components/portfolio/: PortfolioHeader.tsx
frontend/src/components/queue/: ActionQueue.tsx  ClusterCard.tsx  QueueControls.tsx  SkuRow.tsx
frontend/src/components/sku/: CompetitorPanel.tsx  DecisionBar.tsx  NoActionPanel.tsx  ReasoningPanel.tsx  RecommendationPanel.tsx  (+3 more)
frontend/src/lib/: api.ts  formatters.ts
frontend/src/types/: index.ts
