[project]
name = "opptra-pricing-intelligence-backend"
version = "0.1.0"
description = "Opptra Pricing Intelligence backend"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "aiosqlite==0.20.0",
  "pydantic==2.8.2",
  "httpx==0.27.0",
  "anthropic==0.34.2",
  "openai==1.51.2",
  "google-generativeai==0.7.2",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.23.8",
  "ruff==0.6.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
